@@ -4,6 +4,1393 @@ Master Pre-Releases
 This document describes ``dev`` releases which occur weekly from master, and which do
 not undergo the vetting associated with ``stable`` releases.
 
+1.10.0dev1 (08/03/2018)
+-----------------------
+
+New features
+~~~~~~~~~~~~
+
+* Add --output-dir flag to ScalaFmt task (#6134)
+  `PR #6134 <https://github.com/pantsbuild/pants/pull/6134>`_
+
+Bugfixes
+~~~~~~~~
+
+* Fix a deadlock in local process execution. (#6292)
+  `PR #6292 <https://github.com/pantsbuild/pants/pull/6292>`_
+
+* When python target compatibility is not set, use interpreter constraints. (#6284)
+  `PR #6284 <https://github.com/pantsbuild/pants/pull/6284>`_
+
+* Bound pytest below 3.7 to avoid a ZipImportError (#6285)
+  `PR #6285 <https://github.com/pantsbuild/pants/pull/6285>`_
+
+Refactoring, Improvements, and Tooling
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+
+* Kill WrappedPEX. (#6280)
+  `PR #6280 <https://github.com/pantsbuild/pants/pull/6280>`_
+
+* Add copy() method to datatype (#6269)
+  `PR #6269 <https://github.com/pantsbuild/pants/pull/6269>`_
+
+* Upgrade to pex 1.4.5. (#6267)
+  `PR #6267 <https://github.com/pantsbuild/pants/pull/6267>`_
+
+* Hard link or copy ivy and coursier cache (#6246)
+  `PR #6246 <https://github.com/pantsbuild/pants/pull/6246>`_
+
+Documentation Updates
+~~~~~~~~~~~~~~~~~~~~~
+
+* Modify the `alias` page to actually reference the `alias` target (#6277)
+  `PR #6277 <https://github.com/pantsbuild/pants/pull/6277>`_
+
+Migration to Python3 compatibility
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+
+* Python 3 fixes - add open() backport stage 1 (#6290)
+  `PR #6290 <https://github.com/pantsbuild/pants/pull/6290>`_
+
+* Python 3 fixes - fix issues with binaries, option, pantsd, java, and build graph (#6287)
+  `PR #6287 <https://github.com/pantsbuild/pants/pull/6287>`_
+
+* Python 3 fixes - fix issues with engine (#6279)
+  `PR #6279 <https://github.com/pantsbuild/pants/pull/6279>`_
+
+* Rename deprecated assertions (#6286)
+  `PR #6286 <https://github.com/pantsbuild/pants/pull/6286>`_
+
+* Python 3 fixes - fix contrib folders problems (#6272)
+  `PR #6272 <https://github.com/pantsbuild/pants/pull/6272>`_
+
+* Python 3 fixes - fix contrib/python checkstyle (#6274)
+  `PR #6274 <https://github.com/pantsbuild/pants/pull/6274>`_
+
+1.10.0dev0 (07/27/2018)
+-----------------------
+
+* Remove 1.10.x deprecations (#6268)
+  `PR #6268 <https://github.com/pantsbuild/pants/pull/6268>`_
+
+New Features
+~~~~~~~~~~~~
+
+* Add a debug dump flag to the zinc analysis extractor. (#6241)
+  `PR #6241 <https://github.com/pantsbuild/pants/pull/6241>`_
+
+* Add functionality to create jars in zinc wrapper (#6094)
+  `PR #6094 <https://github.com/pantsbuild/pants/pull/6094>`_
+
+* Allow user to specify chunk size (#6173)
+  `PR #6173 <https://github.com/pantsbuild/pants/pull/6173>`_
+
+Bugfixes
+~~~~~~~~
+
+* Fix spurious deprecation warning for fatal_warnings (#6237)
+  `PR #6237 <https://github.com/pantsbuild/pants/pull/6237>`_
+
+* Associate cli arguments with executables and refactor llvm/gcc c/c++ toolchain selection (#6217)
+  `PR #6217 <https://github.com/pantsbuild/pants/pull/6217>`_
+
+* Fix pydist native sources selection (#6205)
+  `PR #6205 <https://github.com/pantsbuild/pants/pull/6205>`_
+
+Refactoring, Improvements, and Tooling
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+
+* Convert `fmt.isort` to bootstrapping isort. (#6182)
+  `PR #6182 <https://github.com/pantsbuild/pants/pull/6182>`_
+
+* Fix env construction on ExecuteProcessRequest (#6220)
+  `PR #6220 <https://github.com/pantsbuild/pants/pull/6220>`_
+
+* Ci deduplication (#6186)
+  `PR #6186 <https://github.com/pantsbuild/pants/pull/6186>`_
+
+* [missing-deps-suggest] move buildozer cli to a new line (#6190)
+  `PR #6190 <https://github.com/pantsbuild/pants/pull/6190>`_
+
+* Print stack trace on ExecutionGraph task failures (#6177)
+  `PR #6177 <https://github.com/pantsbuild/pants/pull/6177>`_
+
+* Add basic native task unit tests. (#6179)
+  `PR #6179 <https://github.com/pantsbuild/pants/pull/6179>`_
+
+* Start migrating away from SchedulerTestBase (#5929)
+  `PR #5929 <https://github.com/pantsbuild/pants/pull/5929>`_
+
+* Only clone taken Strings, not all Strings (#6240)
+  `PR #6240 <https://github.com/pantsbuild/pants/pull/6240>`_
+
+* Remove unused custom `working_set` parameters. (#6221)
+  `PR #6221 <https://github.com/pantsbuild/pants/pull/6221>`_
+
+* Update protobuf and grpcio deps (#6248)
+  `PR #6248 <https://github.com/pantsbuild/pants/pull/6248>`_
+
+Migration to Python3 compatibility
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+
+* Python 3 fixes - fix backend/docgen test issues with bytes vs unicode (#6265)
+  `PR #6265 <https://github.com/pantsbuild/pants/pull/6265>`_
+
+* Python 3 fixes - fix scm bytes vs unicode issues (#6257)
+  `PR #6257 <https://github.com/pantsbuild/pants/pull/6257>`_
+
+* Python 3 fixes - fix net/http issues with bytes vs unicode (#6258)
+  `PR #6258 <https://github.com/pantsbuild/pants/pull/6258>`_
+
+* Python 3 fixes - fix test_base.create_files() unicode issue (#6266)
+  `PR #6266 <https://github.com/pantsbuild/pants/pull/6266>`_
+
+* Fix invalidation unicode vs bytes issues (#6262)
+  `PR #6262 <https://github.com/pantsbuild/pants/pull/6262>`_
+
+* Fix fake options unicode vs bytes issues (#6263)
+  `PR #6263 <https://github.com/pantsbuild/pants/pull/6263>`_
+
+* Python 3 fixes - fix ivy issues with unicode vs bytes (#6264)
+  `PR #6264 <https://github.com/pantsbuild/pants/pull/6264>`_
+
+* Bump beautifulsoup4 to 4.6 to fix Python 3 issue. (#6260)
+  `PR #6260 <https://github.com/pantsbuild/pants/pull/6260>`_
+
+* Python 3 fixes - fix unicode and __hash__ issues with release folder (#6261)
+  `PR #6261 <https://github.com/pantsbuild/pants/pull/6261>`_
+
+* Python 3 fixes - fix syntax issue in reporting test (#6259)
+  `PR #6259 <https://github.com/pantsbuild/pants/pull/6259>`_
+
+* Python 3 fixes - fix process test byte issue (#6256)
+  `PR #6256 <https://github.com/pantsbuild/pants/pull/6256>`_
+
+* Split file set by line instead of spaces to resolve errors (#6247)
+  `PR #6247 <https://github.com/pantsbuild/pants/pull/6247>`_
+
+* Python 3 fixes - test root unicode vs bytes (#6253)
+  `PR #6253 <https://github.com/pantsbuild/pants/pull/6253>`_
+
+* Port test/tasks to Python 3 (#6255)
+  `PR #6255 <https://github.com/pantsbuild/pants/pull/6255>`_
+
+* Python 3 fixes - fix base folder (#6252)
+  `PR #6252 <https://github.com/pantsbuild/pants/pull/6252>`_
+
+* Python 3 fixes - fix invalid ABCMeta comparison (#6251)
+  `PR #6251 <https://github.com/pantsbuild/pants/pull/6251>`_
+
+* Fix syntax issue with raising error (#6245)
+  `PR #6245 <https://github.com/pantsbuild/pants/pull/6245>`_
+
+* Exclude faulthandler and futures if Python 3 (#6244)
+  `PR #6244 <https://github.com/pantsbuild/pants/pull/6244>`_
+
+* Python 3 fixes - fix tarutil and contextutil_test (#6243)
+  `PR #6243 <https://github.com/pantsbuild/pants/pull/6243>`_
+
+* Python 3 fixes - use unicode with temporary_directory() file path (#6233)
+  `PR #6233 <https://github.com/pantsbuild/pants/pull/6233>`_
+
+* Python 3 fixes - fix netrc.py, retry.py, and test_objects.py (#6235)
+  `PR #6235 <https://github.com/pantsbuild/pants/pull/6235>`_
+
+* Python 3 fixes - fix dirutil, fileutil, and xml_parser tests (#6229)
+  `PR #6229 <https://github.com/pantsbuild/pants/pull/6229>`_
+  `PR #6228 <https://github.com/pantsbuild/pants/pull/6228>`_
+
+* Fix issue of os.environ expecting bytes vs unicode in Py2 vs Py3 (#6222)
+  `PR #6222 <https://github.com/pantsbuild/pants/pull/6222>`_
+
+* Python 3 fixes - specify binary vs unicode behavior of temporary_file() (#6226)
+  `PR #6226 <https://github.com/pantsbuild/pants/pull/6226>`_
+
+* Python 3 fixes - fix process_handler timing out (#6232)
+  `PR #6232 <https://github.com/pantsbuild/pants/pull/6232>`_
+
+* Port bin to Python 3 (#6126)
+  `PR #6126 <https://github.com/pantsbuild/pants/pull/6126>`_
+
+* Python 3 fixes - fix various TestBase issues (#6228)
+  `PR #6228 <https://github.com/pantsbuild/pants/pull/6228>`_
+
+* An initial engine terminal UI and demo. (#6223)
+  `PR #6223 <https://github.com/pantsbuild/pants/pull/6223>`_
+
+* Python 3 - fix cffi resolver issues  (#6225)
+  `PR #6225 <https://github.com/pantsbuild/pants/pull/6225>`_
+
+* Exclude subprocess32 if Python 3 (#6212)
+  `PR #6212 <https://github.com/pantsbuild/pants/pull/6212>`_
+
+* Fix imports of future.utils (#6213)
+  `PR #6213 <https://github.com/pantsbuild/pants/pull/6213>`_
+
+* Port test's root folder (#6207)
+  `PR #6207 <https://github.com/pantsbuild/pants/pull/6207>`_
+
+* Port task (#6200)
+  `PR #6200 <https://github.com/pantsbuild/pants/pull/6200>`_
+
+* Port backend/jvm (#6092)
+  `PR #6092 <https://github.com/pantsbuild/pants/pull/6092>`_
+
+* Port net (#6162)
+  `PR #6162 <https://github.com/pantsbuild/pants/pull/6162>`_
+
+* Port pantsd/ to python3 (#6136)
+  `PR #6136 <https://github.com/pantsbuild/pants/pull/6136>`_
+
+* futurize confluence (#6115)
+  `PR #6115 <https://github.com/pantsbuild/pants/pull/6115>`_
+
+* Port testutils to Python 3 (#6211)
+  `PR #6211 <https://github.com/pantsbuild/pants/pull/6211>`_
+
+* Port examples to Python 3 (#6210)
+  `PR #6210 <https://github.com/pantsbuild/pants/pull/6210>`_
+
+* Port pants-plugins to Python 3 (#6209)
+  `PR #6209 <https://github.com/pantsbuild/pants/pull/6209>`_
+
+* Port cache to Python 3 (#6129)
+  `PR #6129 <https://github.com/pantsbuild/pants/pull/6129>`_
+
+* Port stats to Python 3 (#6198)
+  `PR #6198 <https://github.com/pantsbuild/pants/pull/6198>`_
+
+* Port subsystem to Python 3 (#6199)
+  `PR #6199 <https://github.com/pantsbuild/pants/pull/6199>`_
+
+* Port source to Python 3 (#6197)
+  `PR #6197 <https://github.com/pantsbuild/pants/pull/6197>`_
+
+* Port scm to Python 3 (#6196)
+  `PR #6196 <https://github.com/pantsbuild/pants/pull/6196>`_
+
+* Port releases to Python 3 (#6194)
+  `PR #6194 <https://github.com/pantsbuild/pants/pull/6194>`_
+
+* Port process package to Python 3 (#6193)
+  `PR #6193 <https://github.com/pantsbuild/pants/pull/6193>`_
+
+* Prepare a noop release for 1.9.0rc1. (#6204)
+  `PR #6204 <https://github.com/pantsbuild/pants/pull/6204>`_
+
+* Port reporting to Python 3 (#6195)
+  `PR #6195 <https://github.com/pantsbuild/pants/pull/6195>`_
+
+* Port build graph to Python 3 (#6128)
+  `PR #6128 <https://github.com/pantsbuild/pants/pull/6128>`_
+
+* Port contrib/node to py3 (#6158)
+  `PR #6158 <https://github.com/pantsbuild/pants/pull/6158>`_
+
+* update contrib/python with py3 compat (#6184)
+  `PR #6184 <https://github.com/pantsbuild/pants/pull/6184>`_
+
+1.9.0rc0 (07/19/2018)
+---------------------
+
+New features
+~~~~~~~~~~~~
+
+* Conan (third party) support for ctypes native libraries (#5998)
+  `PR #5998 <https://github.com/pantsbuild/pants/pull/5998>`_
+  `PR #5815 <https://github.com/pantsbuild/pants/pull/5815>`_
+
+* Early support for @console_rule. (#6088)
+  `PR #6088 <https://github.com/pantsbuild/pants/pull/6088>`_
+
+Bugfixes
+~~~~~~~~
+
+* Fix incorrect use of bytes() when invoking the daemon in a tty (#6181)
+  `PR #6181 <https://github.com/pantsbuild/pants/pull/6181>`_
+
+* rustfmt check more reliably works (#6172)
+  `PR #6172 <https://github.com/pantsbuild/pants/pull/6172>`_
+
+* Fix isort issues (#6174)
+  `PR #6174 <https://github.com/pantsbuild/pants/pull/6174>`_
+
+* add the target fingerprint to the version of each local dist so that we don't use the first cached one (#6022)
+  `PR #6022 <https://github.com/pantsbuild/pants/pull/6022>`_
+
+* Eliminate obsolete PANTS_ARGS from ci. (#6141)
+  `PR #6141 <https://github.com/pantsbuild/pants/pull/6141>`_
+
+* Preserve output directories if process execution failed (#6152)
+  `PR #6152 <https://github.com/pantsbuild/pants/pull/6152>`_
+
+Refactoring, Improvements, and Tooling
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+
+* Upgrade to isort 4.3.4. (#6166)
+  `PR #6166 <https://github.com/pantsbuild/pants/pull/6166>`_
+
+* fs_util can list the recursive files in a Directory (#6153)
+  `PR #6153 <https://github.com/pantsbuild/pants/pull/6153>`_
+
+* Support output directory saving in remote execution (#6167)
+  `PR #6167 <https://github.com/pantsbuild/pants/pull/6167>`_
+
+* Move each EntryState in the graph under its own Mutex (#6095)
+  `PR #6095 <https://github.com/pantsbuild/pants/pull/6095>`_
+
+Documentation Updates
+~~~~~~~~~~~~~~~~~~~~~
+
+* Impose a consistent sort on CONTRIBUTORS.md. (#6125)
+  `PR #6125 <https://github.com/pantsbuild/pants/pull/6125>`_
+
+Python 3 porting (#6062)
+~~~~~~~~~~~~~~~~~~~~~~~~
+
+* Port engine to Python 3 (#6133)
+  `PR #6133 <https://github.com/pantsbuild/pants/pull/6133>`_
+
+* Port go to py3 (#6139)
+  `PR #6139 <https://github.com/pantsbuild/pants/pull/6139>`_
+
+* Port init package to Python 3 (#6145)
+  `PR #6145 <https://github.com/pantsbuild/pants/pull/6145>`_
+
+* Port help package to Python 3 (#6144)
+  `PR #6144 <https://github.com/pantsbuild/pants/pull/6144>`_
+
+* Port invalidation to Python 3 (#6147)
+  `PR #6147 <https://github.com/pantsbuild/pants/pull/6147>`_
+
+* port cpp to py3 (#6116)
+  `PR #6116 <https://github.com/pantsbuild/pants/pull/6116>`_
+
+* Port ivy to Python 3 (#6154)
+  `PR #6154 <https://github.com/pantsbuild/pants/pull/6154>`_
+
+* Port java to Python 3 (#6159)
+  `PR #6159 <https://github.com/pantsbuild/pants/pull/6159>`_
+
+* Port contrib/scalajs to py3 (#6164)
+  `PR #6164 <https://github.com/pantsbuild/pants/pull/6164>`_
+
+* port scrooge to py3 (#6165)
+  `PR #6165 <https://github.com/pantsbuild/pants/pull/6165>`_
+
+* Add missing future dependency to BUILD (#6135)
+  `PR #6135 <https://github.com/pantsbuild/pants/pull/6135>`_
+
+* Port binaries package to Python 3 (#6127)
+  `PR #6127 <https://github.com/pantsbuild/pants/pull/6127>`_
+
+* Port option package to python3 (#6117)
+  `PR #6117 <https://github.com/pantsbuild/pants/pull/6117>`_
+
+* Port to mypy to py3 (#6140)
+  `PR #6140 <https://github.com/pantsbuild/pants/pull/6140>`_
+
+* Port goal package to Python 3 (#6138)
+  `Issue #6062 <https://github.com/pantsbuild/pants/issues/6062>`_
+  `PR #6138 <https://github.com/pantsbuild/pants/pull/6138>`_
+
+* Port findbugs to py3 (#6137)
+  `PR #6137 <https://github.com/pantsbuild/pants/pull/6137>`_
+
+* Port backend project info to Python 3 (#6132)
+  `PR #6132 <https://github.com/pantsbuild/pants/pull/6132>`_
+
+* Port backend graph info to Python 3 (#6131)
+  `PR #6131 <https://github.com/pantsbuild/pants/pull/6131>`_
+
+* Port core tasks to Python 3 (#6130)
+  `PR #6130 <https://github.com/pantsbuild/pants/pull/6130>`_
+
+1.9.0.dev1 (07/14/2018)
+-----------------------
+
+New features
+~~~~~~~~~~~~
+
+* Add support for reusing Graph node values if their inputs haven't changed (#6059)
+  `PR #6059 <https://github.com/pantsbuild/pants/pull/6059>`_
+
+* Compile a VERY simple java source remotely (no dependencies or inner classes) (#5999)
+  `PR #5999 <https://github.com/pantsbuild/pants/pull/5999>`_
+
+* Expose materialize_directory as an intrinsic function on the scheduler (#6028)
+  `PR #6028 <https://github.com/pantsbuild/pants/pull/6028>`_
+
+* Targets always have a Snapshot (#5994)
+  `PR #5994 <https://github.com/pantsbuild/pants/pull/5994>`_
+
+* Add an execution strategy flag (#5981)
+  `PR #5981 <https://github.com/pantsbuild/pants/pull/5981>`_
+
+* Enable passing option sets to the compiler and deprecate fatal_warnings (#6065)
+  `PR #6065 <https://github.com/pantsbuild/pants/pull/6065>`_
+
+API Changes
+~~~~~~~~~~~
+
+* Upgrade to v2 of bazel protobuf (#6027)
+  `PR #6027 <https://github.com/pantsbuild/pants/pull/6027>`_
+
+* Add PrimitivesSetField and deprecate SetOfPrimitivesField (#6087)
+  `PR #6087 <https://github.com/pantsbuild/pants/pull/6087>`_
+
+* Update to rust 1.27, implicitly requiring OSX 10.11 (#6035)
+  `PR #6035 <https://github.com/pantsbuild/pants/pull/6035>`_
+
+Bugfixes
+~~~~~~~~
+
+* Fix local execution of hermetic integration tests (#6101)
+  `PR #6101 <https://github.com/pantsbuild/pants/pull/6101>`_
+
+* Use PrimitivesSetField in ScalaJs target and minor help text fixup (#6113)
+  `PR #6113 <https://github.com/pantsbuild/pants/pull/6113>`_
+
+* Fix 'current' platform handling. (#6104)
+  `PR #6104 <https://github.com/pantsbuild/pants/pull/6104>`_
+
+* Make RUST_BACKTRACE sniffing less specific (#6107)
+  `PR #6107 <https://github.com/pantsbuild/pants/pull/6107>`_
+
+* Improve source field deprecations (#6097)
+  `PR #6097 <https://github.com/pantsbuild/pants/pull/6097>`_
+
+* Remove and prevent inaccurate __eq__ implementations on datatype (#6061)
+  `PR #6061 <https://github.com/pantsbuild/pants/pull/6061>`_
+
+* Ensure correct toolchain per clone. (#6054)
+  `PR #6054 <https://github.com/pantsbuild/pants/pull/6054>`_
+
+* Have pantsbuild-ci-bot do deploys. (#6053)
+  `PR #6053 <https://github.com/pantsbuild/pants/pull/6053>`_
+
+* Fix go-import meta tag ends with /> #6036 (#6037)
+  `PR #6037 <https://github.com/pantsbuild/pants/pull/6037>`_
+
+* Fix bad exclusion introduced during rushed change. (#6034)
+  `PR #6034 <https://github.com/pantsbuild/pants/pull/6034>`_
+
+* Fix unicode handling in Exiters (#6032)
+  `PR #6032 <https://github.com/pantsbuild/pants/pull/6032>`_
+
+* [pantsd] Improve environment unicode handling. (#6031)
+  `PR #6031 <https://github.com/pantsbuild/pants/pull/6031>`_
+
+* Actually return execution options (#6019)
+  `PR #6019 <https://github.com/pantsbuild/pants/pull/6019>`_
+
+* Ignore the `logs/` dir. (#6021)
+  `PR #6021 <https://github.com/pantsbuild/pants/pull/6021>`_
+
+* Fix edge removal in Graph that could make invalidation inaccurate (#6123)
+  `PR #6123 <https://github.com/pantsbuild/pants/pull/6123>`_
+
+Refactoring, Improvements, and Tooling
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+
+* Port errorprone to py3 (#6118)
+  `PR #6118 <https://github.com/pantsbuild/pants/pull/6118>`_
+
+* Port console to Python 3 (#6121)
+  `PR #6121 <https://github.com/pantsbuild/pants/pull/6121>`_
+
+* Port buildgen to py3 (#6110)
+  `PR #6110 <https://github.com/pantsbuild/pants/pull/6110>`_
+
+* Add release metadata to boxfuture (#6106)
+  `PR #6106 <https://github.com/pantsbuild/pants/pull/6106>`_
+
+* Port engine/fs.py datatype() instances (#6103)
+  `PR #6103 <https://github.com/pantsbuild/pants/pull/6103>`_
+  `PR #6098 <https://github.com/pantsbuild/pants/pull/6098>`_
+  `PR #6092 <https://github.com/pantsbuild/pants/pull/6092>`_
+
+* Port findbugs to py3. (#6120)
+  `PR #6120 <https://github.com/pantsbuild/pants/pull/6120>`_
+
+* Port codeanalysis to py3. (#6111)
+  `PR #6111 <https://github.com/pantsbuild/pants/pull/6111>`_
+
+* Port buildrefactor to py3. (#6109)
+  `PR #6109 <https://github.com/pantsbuild/pants/pull/6109>`_
+
+* Switch from output_async to spawn_async, and buffer output. (#6105)
+  `PR #6105 <https://github.com/pantsbuild/pants/pull/6105>`_
+
+* Allow Rust to store `unicode` as well as `bytes` (#6108)
+  `PR #6108 <https://github.com/pantsbuild/pants/pull/6108>`_
+  `PR #6103 <https://github.com/pantsbuild/pants/pull/6103>`_
+
+* Remove unnecessary __future__ imports  (#6096)
+  `PR #6096 <https://github.com/pantsbuild/pants/pull/6096>`_
+
+* Port fs to python 3 compatibility (#6091)
+  `PR #6091 <https://github.com/pantsbuild/pants/pull/6091>`_
+
+* Nodes output cheaply-cloneable values (#6078)
+  `PR #6078 <https://github.com/pantsbuild/pants/pull/6078>`_
+
+* execution_strategy is a memoized_property (#6052)
+  `PR #6052 <https://github.com/pantsbuild/pants/pull/6052>`_
+
+* Port backend/python to Python 3 (#6086)
+  `Issue #6062 <https://github.com/pantsbuild/pants/issues/6062>`_
+  `PR #6086 <https://github.com/pantsbuild/pants/pull/6086>`_
+
+* Port backend/native to Python 3 (#6084)
+  `Issue #6062 <https://github.com/pantsbuild/pants/issues/6062>`_
+  `PR #6084 <https://github.com/pantsbuild/pants/pull/6084>`_
+
+* Port majority of pants/util to Python 3 (#6073)
+  `Issue #6062 <https://github.com/pantsbuild/pants/issues/6062>`_
+  `PR #6073 <https://github.com/pantsbuild/pants/pull/6073>`_
+
+* Port backend/codegen and backend/docgen to Python 3 (#6083)
+  `PR #6083 <https://github.com/pantsbuild/pants/pull/6083>`_
+
+* Port util/process_handler.py and util/tarutil.py to Python 3 (#6082)
+  `PR #6082 <https://github.com/pantsbuild/pants/pull/6082>`_
+  `PR #6073 <https://github.com/pantsbuild/pants/pull/6073>`_
+
+* Add `-ltrace` and requests debug logging. (#6070)
+  `PR #6070 <https://github.com/pantsbuild/pants/pull/6070>`_
+
+* Port util metaprogramming files to Python3 (#6072)
+  `Issue #6062 <https://github.com/pantsbuild/pants/issues/6062>`_
+  `PR #6072 <https://github.com/pantsbuild/pants/pull/6072>`_
+
+* Add future lib and port src/base to Python3 (#6067)
+  `Issue #6062), <https://github.com/pantsbuild/pants/issues/6062),>`_
+  `PR #6067 <https://github.com/pantsbuild/pants/pull/6067>`_
+
+* Run `futurize --stage1` to make safe changes for python 3 compatibility. (#6063)
+  `PR #6063 <https://github.com/pantsbuild/pants/pull/6063>`_
+  `Issue #6062 <https://github.com/pantsbuild/pants/issues/6062>`_
+
+* Switch to a per-entry state machine in Graph (#6013)
+  `PR #6013 <https://github.com/pantsbuild/pants/pull/6013>`_
+
+* Log more in rust tests (#6060)
+  `PR #6060 <https://github.com/pantsbuild/pants/pull/6060>`_
+
+* Introduce libc subsystem to find crti.o on linux hosts and unskip the native backend subsystem tests (#5943)
+  `PR #5943 <https://github.com/pantsbuild/pants/pull/5943>`_
+
+* Clean up process execution python API (#6051)
+  `PR #6051 <https://github.com/pantsbuild/pants/pull/6051>`_
+
+* Skip pyprep and pytest-prep if there are no python targest (#6039)
+  `PR #6039 <https://github.com/pantsbuild/pants/pull/6039>`_
+
+* Simplify rust code (#6043)
+  `PR #6043 <https://github.com/pantsbuild/pants/pull/6043>`_
+
+* [remoting] Move local process execution tempdirs into the workdir, add option to not delete them (#6023)
+  `PR #6023 <https://github.com/pantsbuild/pants/pull/6023>`_
+
+* Many rust lints (#5982)
+  `PR #5982 <https://github.com/pantsbuild/pants/pull/5982>`_
+
+* Include type name in TypedDataType construction errors (#6015)
+  `PR #6015 <https://github.com/pantsbuild/pants/pull/6015>`_
+
+* Consolidate `src/python/pants/python` -> `src/python/pants/backend/python` (#6025)
+  `PR #6025 <https://github.com/pantsbuild/pants/pull/6025>`_
+
+* Extract and genericize Graph for easier testing (#6010)
+  `PR #6010 <https://github.com/pantsbuild/pants/pull/6010>`_
+
+* Add libc search noop option (#6122)
+  `PR #6122 <https://github.com/pantsbuild/pants/pull/6122>`_
+
+* Fix test_objects handling of dataclass() py2-py3 compatibility (#6098)
+  `PR #6098 <https://github.com/pantsbuild/pants/pull/6098>`_
+  `Issue #6062 <https://github.com/pantsbuild/pants/issues/6062>`_
+
+1.9.0.dev0 (06/25/2018)
+-----------------------
+
+New features
+~~~~~~~~~~~~
+
+* Release Pants as a pex. (#6014)
+  `PR #6014 <https://github.com/pantsbuild/pants/pull/6014>`_
+
+* C/C++ targets which can be compiled/linked and used in python_dist() with ctypes (#5815)
+  `PR #5815 <https://github.com/pantsbuild/pants/pull/5815>`_
+
+API Changes
+~~~~~~~~~~~
+
+* Deprecate sources except EagerFilesetWithSpec (#5993)
+  `PR #5993 <https://github.com/pantsbuild/pants/pull/5993>`_
+
+* source attribute is automatically promoted to sources (#5908)
+  `PR #5908 <https://github.com/pantsbuild/pants/pull/5908>`_
+
+Bugfixes
+~~~~~~~~
+
+* Run scalafix before scalafmt (#6011)
+  `PR #6011 <https://github.com/pantsbuild/pants/pull/6011>`_
+
+Refactoring, Improvements, and Tooling
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+
+* Add .vscode/ folder to .gitignore (#6020)
+  `PR #6020 <https://github.com/pantsbuild/pants/pull/6020>`_
+
+* [engine] Selecting for ExecuteProcessResult will Throw on non-zero exit (#6000)
+  `PR #6000 <https://github.com/pantsbuild/pants/pull/6000>`_
+
+* Context always has a scheduler in tests (#5997)
+  `PR #5997 <https://github.com/pantsbuild/pants/pull/5997>`_
+
+* Engine looks up default sources when parsing (#5989)
+  `PR #5989 <https://github.com/pantsbuild/pants/pull/5989>`_
+
+* Fix TestSetupPyInterpreter.test_setuptools_version (#5988)
+  `PR #5988 <https://github.com/pantsbuild/pants/pull/5988>`_
+
+* Caching tests are parsed through the engine (#5985)
+  `PR #5985 <https://github.com/pantsbuild/pants/pull/5985>`_
+
+* Override get_sources for pants plugins (#5984)
+  `PR #5984 <https://github.com/pantsbuild/pants/pull/5984>`_
+
+* make_target upgrades sources to EagerFilesetWithSpec (#5974)
+  `PR #5974 <https://github.com/pantsbuild/pants/pull/5974>`_
+
+* Robustify test_namespace_effective PYTHONPATH. (#5976)
+  `PR #5976 <https://github.com/pantsbuild/pants/pull/5976>`_
+
+Documentation Updates
+~~~~~~~~~~~~~~~~~~~~~
+
+* 1.7.0 release notes (#5983)
+  `PR #5983 <https://github.com/pantsbuild/pants/pull/5983>`_
+
+1.8.0rc0 (06/18/2018)
+---------------------
+
+Bugfixes
+~~~~~~~~
+
+* Shorten safe filenames further, and combine codepaths to make them readable. (#5971)
+  `PR #5971 <https://github.com/pantsbuild/pants/pull/5971>`_
+
+* Whitelist the --owner-of option to not restart the daemon. (#5979)
+  `PR #5979 <https://github.com/pantsbuild/pants/pull/5979>`_
+
+Refactoring, Improvements, and Tooling
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+
+* Remove DeprecatedPythonTaskTestBase (#5973)
+  `Issue #5870 <https://github.com/pantsbuild/pants/issues/5870>`_
+  `PR #5973 <https://github.com/pantsbuild/pants/pull/5973>`_
+
+* Mark a few options that should not show up in `./pants help`. (#5968)
+  `PR #5968 <https://github.com/pantsbuild/pants/pull/5968>`_
+
+Documentation Updates
+~~~~~~~~~~~~~~~~~~~~~
+
+* adding more documentation for python_app (#5965)
+  `PR #5965 <https://github.com/pantsbuild/pants/pull/5965>`_
+
+1.8.0.dev4 (06/15/2018)
+-----------------------
+
+New features
+~~~~~~~~~~~~
+
+* Allow manylinux wheels when resolving plugins. (#5959)
+  `PR #5959 <https://github.com/pantsbuild/pants/pull/5959>`_
+
+* Separate the resolution cache and repository cache in Ivy (#5844)
+  `PR #5844 <https://github.com/pantsbuild/pants/pull/5844>`_
+
+* Allow pants to select targets by file(s) (#5930)
+  `PR #5930 <https://github.com/pantsbuild/pants/pull/5930>`_
+
+Bugfixes
+~~~~~~~~
+
+* Cobertura coverage: Include the full target closure's classpath entries for instrumentation (#5879)
+  `PR #5879 <https://github.com/pantsbuild/pants/pull/5879>`_
+
+* `exclude-patterns` and `tag` should apply only to roots (#5786)
+  `PR #5786 <https://github.com/pantsbuild/pants/pull/5786>`_
+
+* Fixup macosx platform version. (#5938)
+  `PR #5938 <https://github.com/pantsbuild/pants/pull/5938>`_
+
+* Ban bad `readonly` shell pattern (#5924)
+  `PR #5924 <https://github.com/pantsbuild/pants/pull/5924>`_
+
+Refactoring, Improvements, and Tooling
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+
+* Record start times per graph node and expose a method to summarize them. (#5964)
+  `PR #5964 <https://github.com/pantsbuild/pants/pull/5964>`_
+
+* Remove value wrapper on the python side of ffi. (#5961)
+  `PR #5961 <https://github.com/pantsbuild/pants/pull/5961>`_
+
+* Construct rule_graph recursively (#5955)
+  `PR #5955 <https://github.com/pantsbuild/pants/pull/5955>`_
+
+* Support output directory saving for local process execution. (#5944)
+  `PR #5944 <https://github.com/pantsbuild/pants/pull/5944>`_
+
+* use liblzma.dylib for xz on osx and add platform-specific testing to the rust osx shard (#5936)
+  `PR #5936 <https://github.com/pantsbuild/pants/pull/5936>`_
+
+* Improve PythonInterpreterCache logging (#5954)
+  `PR #5954 <https://github.com/pantsbuild/pants/pull/5954>`_
+
+* Re-shade zinc to avoid classpath collisions with annotation processors. (#5953)
+  `PR #5953 <https://github.com/pantsbuild/pants/pull/5953>`_
+
+* [pantsd] Robustify client connection logic. (#5952)
+  `PR #5952 <https://github.com/pantsbuild/pants/pull/5952>`_
+
+* Enable fromfile support for --owner-of and increase test coverage (#5948)
+  `PR #5948 <https://github.com/pantsbuild/pants/pull/5948>`_
+
+* move glob matching into its own file (#5945)
+  `PR #5945 <https://github.com/pantsbuild/pants/pull/5945>`_
+
+* Add new remote execution options (#5932)
+  `PR #5932 <https://github.com/pantsbuild/pants/pull/5932>`_
+
+* Use target not make_target in some tests (#5939)
+  `PR #5939 <https://github.com/pantsbuild/pants/pull/5939>`_
+
+* [jvm-compile] template-methodify JvmCompile further; add compiler choices (#5923)
+  `PR #5923 <https://github.com/pantsbuild/pants/pull/5923>`_
+
+* Add script to get a list of failing pants from travis (#5946)
+  `PR #5946 <https://github.com/pantsbuild/pants/pull/5946>`_
+
+* Integration test for daemon environment scrubbing (#5893)
+  `PR #5893 <https://github.com/pantsbuild/pants/pull/5893>`_
+
+Documentation Updates
+~~~~~~~~~~~~~~~~~~~~~
+
+* release notes for 1.7.0.rc1 (#5942)
+  `PR #5942 <https://github.com/pantsbuild/pants/pull/5942>`_
+
+* Add the --owner-of= usage on Target Address documentation (#5931)
+  `PR #5931 <https://github.com/pantsbuild/pants/pull/5931>`_
+
+1.8.0.dev3 (06/08/2018)
+-----------------------
+
+New features
+~~~~~~~~~~~~
+
+* Initial @rules for Options computation via the engine. (#5889)
+  `PR #5889 <https://github.com/pantsbuild/pants/pull/5889>`_
+
+* Pantsd terminates if its pidfile changes (#5877)
+  `PR #5877 <https://github.com/pantsbuild/pants/pull/5877>`_
+
+* Populate output_directory in ExecuteProcessResponse (#5896)
+  `PR #5896 <https://github.com/pantsbuild/pants/pull/5896>`_
+
+* Add support for passing an incremental_import option via idea-plugin (#5886)
+  `PR #5886 <https://github.com/pantsbuild/pants/pull/5886>`_
+
+Bugfixes
+~~~~~~~~
+
+* Fix `SelectInterpreter` read of `interpreter.path` (#5925)
+  `PR #5925 <https://github.com/pantsbuild/pants/pull/5925>`_
+
+* Fix rust log level comparison (#5918)
+  `PR #5918 <https://github.com/pantsbuild/pants/pull/5918>`_
+
+* Fix a trivial bug in error reporting in the kythe indexing task. (#5913)
+  `PR #5913 <https://github.com/pantsbuild/pants/pull/5913>`_
+
+Refactoring, Improvements, and Tooling
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+
+* Put the ChangeCalculator implementation next to TargetRootsCalculator (#5917)
+  `PR #5917 <https://github.com/pantsbuild/pants/pull/5917>`_
+
+* Remove sdist publishing hack. (#5926)
+  `PR #5926 <https://github.com/pantsbuild/pants/pull/5926>`_
+
+* Upgrade to pex 1.4.3. (#5910)
+  `PR #5910 <https://github.com/pantsbuild/pants/pull/5910>`_
+
+* Kill unused legacy code. (#5921)
+  `PR #5921 <https://github.com/pantsbuild/pants/pull/5921>`_
+
+* Add @classproperty (#5901)
+  `PR #5901 <https://github.com/pantsbuild/pants/pull/5901>`_
+
+* Simplify PathGlobs python datatype (#5915)
+  `PR #5915 <https://github.com/pantsbuild/pants/pull/5915>`_
+
+* Split short-form from long-form of setup_legacy_graph (#5911)
+  `PR #5911 <https://github.com/pantsbuild/pants/pull/5911>`_
+
+* Add Daniel McClanahan & Dorothy Ordogh to committers (#5909)
+  `PR #5909 <https://github.com/pantsbuild/pants/pull/5909>`_
+
+* Merge Root/Inner Entry cases into an EntryWithDeps case. (#5914)
+  `PR #5914 <https://github.com/pantsbuild/pants/pull/5914>`_
+
+* Make mock test server emit timing data (#5891)
+  `PR #5891 <https://github.com/pantsbuild/pants/pull/5891>`_
+
+* Update release jvm docs to have notes about gpg 2.1 (#5907)
+  `PR #5907 <https://github.com/pantsbuild/pants/pull/5907>`_
+
+* Set output_files field on remote Action (#5902)
+  `PR #5902 <https://github.com/pantsbuild/pants/pull/5902>`_
+
+* From<Digest> no longer panics (#5832)
+  `PR #5832 <https://github.com/pantsbuild/pants/pull/5832>`_
+
+* Use tempfile crate not tempdir crate (#5900)
+  `PR #5900 <https://github.com/pantsbuild/pants/pull/5900>`_
+
+1.8.0.dev2 (06/02/2018)
+-----------------------
+
+Bugfixes
+~~~~~~~~
+
+* Fix using classpath jars with compiler plugins (#5890)
+  `PR #5890 <https://github.com/pantsbuild/pants/pull/5890>`_
+
+* Fix visualize-to option post addition of Sessions (#5885)
+  `PR #5885 <https://github.com/pantsbuild/pants/pull/5885>`_
+
+* Robustify go_protobuf_library (#5887)
+  `PR #5887 <https://github.com/pantsbuild/pants/pull/5887>`_
+
+* Repair hermetic_environment_as for C-level environment variable access. (#5898)
+  `PR #5898 <https://github.com/pantsbuild/pants/pull/5898>`_
+
+Refactoring, Improvements, and Tooling
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+
+* Add deprecation warning for pep8 'plugin' in pythonstyle suppress file (#5888)
+  `PR #5888 <https://github.com/pantsbuild/pants/pull/5888>`_
+
+* warn or error on matching source globs (#5769)
+  `PR #5769 <https://github.com/pantsbuild/pants/pull/5769>`_
+
+* Mark things which generate cffi for change detection (#5883)
+  `PR #5883 <https://github.com/pantsbuild/pants/pull/5883>`_
+
+* Sort list goal output (#5872)
+  `PR #5872 <https://github.com/pantsbuild/pants/pull/5872>`_
+
+* Output stdout and stderr when nailgun fails to connect (#5892)
+  `PR #5892 <https://github.com/pantsbuild/pants/pull/5892>`_
+
+New features
+~~~~~~~~~~~~
+
+* Remote execution can be enabled by flags (#5881)
+  `PR #5881 <https://github.com/pantsbuild/pants/pull/5881>`_
+
+1.8.0.dev1 (05/25/2018)
+-----------------------
+
+Bugfixes
+~~~~~~~~
+
+* Fix Go distribution SYSTEM_ID key (#5861)
+  `PR #5861 <https://github.com/pantsbuild/pants/pull/5861>`_
+
+* Improve logging/handling of signaled, killed, and terminated tests (#5859)
+  `PR #5859 <https://github.com/pantsbuild/pants/pull/5859>`_
+
+* Use write_all not write (#5852)
+  `PR #5852 <https://github.com/pantsbuild/pants/pull/5852>`_
+
+New features
+~~~~~~~~~~~~
+
+* Add go_protobuf_library (#5838)
+  `PR #5838 <https://github.com/pantsbuild/pants/pull/5838>`_
+
+* setup_requires argument for python_dist targets (#5825)
+  `PR #5825 <https://github.com/pantsbuild/pants/pull/5825>`_
+
+API Changes
+~~~~~~~~~~~
+
+* Update pep8 to pycodestyle (#5867)
+  `PR #5867 <https://github.com/pantsbuild/pants/pull/5867>`_
+
+* Update pyflakes to 2.0.0 (#5866)
+  `PR #5866 <https://github.com/pantsbuild/pants/pull/5866>`_
+
+* Port BaseTest to v2 engine as TestBase (#5611)
+  `PR #5611 <https://github.com/pantsbuild/pants/pull/5611>`_
+
+Refactoring, Improvements, and Tooling
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+
+* [remoting] Store raw bytes for stdout and stderr if received inline. (#5855)
+  `PR #5855 <https://github.com/pantsbuild/pants/pull/5855>`_
+
+* [rust/engine] add timeout \ description for grpc process requests (#5632)
+  `PR #5632 <https://github.com/pantsbuild/pants/pull/5632>`_
+
+* Use tokio for scheduler requests and local process execution (#5846)
+  `PR #5846 <https://github.com/pantsbuild/pants/pull/5846>`_
+
+* Rust compilation is more robust and fast (#5857)
+  `PR #5857 <https://github.com/pantsbuild/pants/pull/5857>`_
+
+* Core has a CommandRunner (#5850)
+  `PR #5850 <https://github.com/pantsbuild/pants/pull/5850>`_
+
+* Only depend on subprocess32 in python2. (#5847)
+  `PR #5847 <https://github.com/pantsbuild/pants/pull/5847>`_
+
+* Hermeticize cargo build. (#5742)
+  `PR #5742 <https://github.com/pantsbuild/pants/pull/5742>`_
+
+* A utility to aggregate s3 access logs. (#5777)
+  `PR #5777 <https://github.com/pantsbuild/pants/pull/5777>`_
+
+* Update all rust dependencies (ie, ran `cargo update`). (#5845)
+  `PR #5845 <https://github.com/pantsbuild/pants/pull/5845>`_
+
+Documentation Updates
+~~~~~~~~~~~~~~~~~~~~~
+
+* Document how to select a Python interpreter (#5843)
+  `PR #5843 <https://github.com/pantsbuild/pants/pull/5843>`_
+
+1.8.0.dev0 (05/18/2018)
+-----------------------
+
+Bugfixes
+~~~~~~~~
+
+* Invalidate all tasks on source root changes. (#5821)
+  `PR #5821 <https://github.com/pantsbuild/pants/pull/5821>`_
+
+New features
+~~~~~~~~~~~~
+
+* Allow alternate binaries download urls generation and convert GoDistribution and LLVM subsystems to use it (#5780)
+  `PR #5780 <https://github.com/pantsbuild/pants/pull/5780>`_
+
+API Changes
+~~~~~~~~~~~
+
+* Remove SelectDependencies. (#5800)
+  `PR #5800 <https://github.com/pantsbuild/pants/pull/5800>`_
+
+* Zinc 1.0.0 upgrade: Python portion (#4729)
+  `PR #4729 <https://github.com/pantsbuild/pants/pull/4729>`_
+
+Refactoring, Improvements, and Tooling
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+
+* Revert to non-forked grpcio-compiler (#5842)
+  `PR #5842 <https://github.com/pantsbuild/pants/pull/5842>`_
+
+* cloc uses v2 process execution (#5840)
+  `PR #5840 <https://github.com/pantsbuild/pants/pull/5840>`_
+
+* Remove extra workunit from coursier resolve (#5837)
+  `PR #5837 <https://github.com/pantsbuild/pants/pull/5837>`_
+
+* Remove stale comment (#5839)
+  `PR #5839 <https://github.com/pantsbuild/pants/pull/5839>`_
+
+* Script BinaryUtils can be captured as snapshots (#5835)
+  `PR #5835 <https://github.com/pantsbuild/pants/pull/5835>`_
+
+* CommandRunners implement a single trait (#5836)
+  `PR #5836 <https://github.com/pantsbuild/pants/pull/5836>`_
+
+* Directories can be merged synchronously (#5834)
+  `PR #5834 <https://github.com/pantsbuild/pants/pull/5834>`_
+
+* Allow arbitrary directories to be Snapshotted (#5801)
+  `PR #5801 <https://github.com/pantsbuild/pants/pull/5801>`_
+
+* Regression test for #4596 (#4608)
+  `PR #4608 <https://github.com/pantsbuild/pants/pull/4608>`_
+
+* Empty digest is always known (#5829)
+  `PR #5829 <https://github.com/pantsbuild/pants/pull/5829>`_
+
+* Local process execution can fetch output files (#5784)
+  `PR #5784 <https://github.com/pantsbuild/pants/pull/5784>`_
+
+* Fetch native stack traces if any cores were dumped (#5828)
+  `PR #5828 <https://github.com/pantsbuild/pants/pull/5828>`_
+
+* FileContents is gotten from DirectoryDigest not Snapshot (#5820)
+  `PR #5820 <https://github.com/pantsbuild/pants/pull/5820>`_
+
+* [release.sh] Use git configured gpg binary if one is set (#5826)
+  `PR #5826 <https://github.com/pantsbuild/pants/pull/5826>`_
+
+* [release-doc] rm explicit owner list in favor of just using -o (#5823)
+  `PR #5823 <https://github.com/pantsbuild/pants/pull/5823>`_
+
+* brfs: Sleep a bit after mounting the filesystem (#5819)
+  `PR #5819 <https://github.com/pantsbuild/pants/pull/5819>`_
+
+* Snapshot contains a DirectoryDigest (#5811)
+  `PR #5811 <https://github.com/pantsbuild/pants/pull/5811>`_
+
+* Add a facility for exposing metrics from the native engine (#5808)
+  `PR #5808 <https://github.com/pantsbuild/pants/pull/5808>`_
+
+* Expand engine readme (#5759)
+  `PR #5759 <https://github.com/pantsbuild/pants/pull/5759>`_
+
+* Document python_app target in Python readme. (#5816)
+  `PR #5816 <https://github.com/pantsbuild/pants/pull/5816>`_
+
+* [release-docs] Update step 0, linkify links (#5806)
+  `PR #5806 <https://github.com/pantsbuild/pants/pull/5806>`_
+
+1.7.0.rc0 (05/11/2018)
+----------------------
+
+Bugfixes
+~~~~~~~~
+
+* Fix a broken 3rdparty example. (#5797)
+  `PR #5797 <https://github.com/pantsbuild/pants/pull/5797>`_
+
+* Adding compile scopes, because thats expected from doc gen (#5789)
+  `PR #5789 <https://github.com/pantsbuild/pants/pull/5789>`_
+
+* Copy locally build .whl files to dist dir when 'binary' goal is invoked. (#5749)
+  `PR #5749 <https://github.com/pantsbuild/pants/pull/5749>`_
+
+* [pytest runner] re-add --options flag as a shlexed list of strings (#5790)
+  `PR #5790 <https://github.com/pantsbuild/pants/pull/5790>`_
+  `PR #) <https://github.com/pantsbuild/pants/pull/5594/)>`_
+
+New features
+~~~~~~~~~~~~
+
+* add --frozen-lockfile option as default for yarn install (#5758)
+  `PR #5758 <https://github.com/pantsbuild/pants/pull/5758>`_
+
+* Remove jvm compile subsystem (#5805)
+  `PR #5805 <https://github.com/pantsbuild/pants/pull/5805>`_
+
+* Add Javac compile option as an alternative to Zinc (#5743)
+  `PR #5743 <https://github.com/pantsbuild/pants/pull/5743>`_
+
+* Add python_app support (#5704)
+  `PR #5704 <https://github.com/pantsbuild/pants/pull/5704>`_
+
+Refactoring, Improvements, and Tooling
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+
+* Bump to scala 2.11.12 by default. (#5804)
+  `PR #5804 <https://github.com/pantsbuild/pants/pull/5804>`_
+
+* Review feedback from #5792. (#5796)
+  `PR #5796 <https://github.com/pantsbuild/pants/pull/5796>`_
+
+* Skip commit hooks during publishing (#5795)
+  `PR #5795 <https://github.com/pantsbuild/pants/pull/5795>`_
+
+* Improve support for intrinsic tasks (#5792)
+  `PR #5792 <https://github.com/pantsbuild/pants/pull/5792>`_
+
+* Remote CommandRunner has reset_prefork method (#5791)
+  `PR #5791 <https://github.com/pantsbuild/pants/pull/5791>`_
+
+* PosixFS can get PathStats for a set of PathBufs (#5783)
+  `PR #5783 <https://github.com/pantsbuild/pants/pull/5783>`_
+
+* Bump to zinc 1.1.7 (#5794)
+  `PR #5794 <https://github.com/pantsbuild/pants/pull/5794>`_
+
+* Add configurable timeouts for reading/writing to the cache. (#5793)
+  `PR #5793 <https://github.com/pantsbuild/pants/pull/5793>`_
+
+* Improve clarity of the "why use pants" page (#5778)
+  `PR #5778 <https://github.com/pantsbuild/pants/pull/5778>`_
+
+* Repair PyPI user checking in release scripts. (#5787)
+  `PR #5787 <https://github.com/pantsbuild/pants/pull/5787>`_
+
+1.7.0.dev2 (05/04/2018)
+-----------------------
+
+New features
+~~~~~~~~~~~~
+
+* Wrap ShardedLmdb in a Resettable (#5775)
+  `PR #5775 <https://github.com/pantsbuild/pants/pull/5775>`_
+
+* Expand type constraints allowed in datatype() (#5774)
+  `PR #5774 <https://github.com/pantsbuild/pants/pull/5774>`_
+
+* Introduce Resettable (#5770)
+  `PR #5770 <https://github.com/pantsbuild/pants/pull/5770>`_
+
+* Add support for merging Snapshots (#5746)
+  `PR #5746 <https://github.com/pantsbuild/pants/pull/5746>`_
+
+* Remodel of node subsystem (#5698)
+  `PR #5698 <https://github.com/pantsbuild/pants/pull/5698>`_
+
+Refactoring, Improvements, and Tooling
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+
+* Extract OneOffStoreFileByDigest (#5782)
+  `PR #5782 <https://github.com/pantsbuild/pants/pull/5782>`_
+
+* Introduce a backdoor around PYTHONPATH scrubbing in pytest runs. (#5767)
+  `PR #5767 <https://github.com/pantsbuild/pants/pull/5767>`_
+
+* Address @jsirois final comments that were not addressed on PR #5765 (#5773)
+  `PR #5773 <https://github.com/pantsbuild/pants/pull/5773>`_
+
+* Extract AppBase base class (#5772)
+  `PR #5772 <https://github.com/pantsbuild/pants/pull/5772>`_
+
+* Bump ordermap to indexmap 1 (#5771)
+  `PR #5771 <https://github.com/pantsbuild/pants/pull/5771>`_
+
+* Disable lint for Python 3 targets (#5765)
+  `PR #5765 <https://github.com/pantsbuild/pants/pull/5765>`_
+
+* Nav menu change with drop-downs (#5750)
+  `PR #5750 <https://github.com/pantsbuild/pants/pull/5750>`_
+
+* Expose rules from language backends with an application to python_dist() creation (#5747)
+  `PR #5747 <https://github.com/pantsbuild/pants/pull/5747>`_
+
+* Move From impls from hashing to bazel_protos (#5706)
+  `PR #5706 <https://github.com/pantsbuild/pants/pull/5706>`_
+
+* Reformat bazel_protos/build.rs (#5760)
+  `PR #5760 <https://github.com/pantsbuild/pants/pull/5760>`_
+
+* Add test that pantsd can be used twice in parallel (#5757)
+  `PR #5757 <https://github.com/pantsbuild/pants/pull/5757>`_
+
+* type-check specific datatype fields concisely and remove the class name argument (#5723)
+  `PR #5723 <https://github.com/pantsbuild/pants/pull/5723>`_
+
+* expand doc publish script, use products for sitegen tasks, and clarify the publish site subdir option (#5702)
+  `PR #5702 <https://github.com/pantsbuild/pants/pull/5702>`_
+
+* Prepare 1.6.0rc3 (#5756)
+  `PR #5756 <https://github.com/pantsbuild/pants/pull/5756>`_
+
+* Save noop time on codegen (#5748)
+  `PR #5748 <https://github.com/pantsbuild/pants/pull/5748>`_
+
+* Rename and simplify store_list. (#5751)
+  `PR #5751 <https://github.com/pantsbuild/pants/pull/5751>`_
+
+* Boxable::to_boxed returns BoxFuture not Box<Self> (#5754)
+  `PR #5754 <https://github.com/pantsbuild/pants/pull/5754>`_
+
+* Misc rust fixups (#5753)
+  `PR #5753 <https://github.com/pantsbuild/pants/pull/5753>`_
+
+* eagerly fetch stderr in remote process execution (#5735)
+  `PR #5735 <https://github.com/pantsbuild/pants/pull/5735>`_
+
+* Looping request with backoff period (#5714)
+  `PR #5714 <https://github.com/pantsbuild/pants/pull/5714>`_
+
+* Fixup dev-dependencies in brfs. (#5745)
+  `PR #5745 <https://github.com/pantsbuild/pants/pull/5745>`_
+
+* brfs: FUSE filesystem exposing the Store and remote CAS (#5705)
+  `PR #5705 <https://github.com/pantsbuild/pants/pull/5705>`_
+
+* Update errorprone to 2.3.1 and findbugs to spotbugs 3.1.3 (#5725)
+  `PR #5725 <https://github.com/pantsbuild/pants/pull/5725>`_
+
+* Dedupe parsed Gets (#5700)
+  `PR #5700 <https://github.com/pantsbuild/pants/pull/5700>`_
+
+* Update my name to the right one (#5741)
+  `PR #5741 <https://github.com/pantsbuild/pants/pull/5741>`_
+
+* Stop using tools.jar for JAXB xjc tool since tools.jar has been removed from Java 9+ (#5740)
+  `PR #5740 <https://github.com/pantsbuild/pants/pull/5740>`_
+
+* Update running from sources docs (#5731)
+  `PR #5731 <https://github.com/pantsbuild/pants/pull/5731>`_
+
+* Use Scala 2.12.4 for --scala-platform-version=2.12 (#5738)
+  `PR #5738 <https://github.com/pantsbuild/pants/pull/5738>`_
+
+* Extract reusable test data (#5737)
+  `PR #5737 <https://github.com/pantsbuild/pants/pull/5737>`_
+
+* Only upload digests missing from CAS (#5713)
+  `PR #5713 <https://github.com/pantsbuild/pants/pull/5713>`_
+
+* Prepare 1.5.1rc2 (#5734)
+  `PR #5734 <https://github.com/pantsbuild/pants/pull/5734>`_
+
+* Break a Core / Node cycle  (#5733)
+  `PR #5733 <https://github.com/pantsbuild/pants/pull/5733>`_
+
+* [rm-deprecation] remove leveled_predicate kwarg from buildgraph walk fns (#5730)
+  `PR #5730 <https://github.com/pantsbuild/pants/pull/5730>`_
+
+* Bump max local store size (#5728)
+  `PR #5728 <https://github.com/pantsbuild/pants/pull/5728>`_
+
+1.7.0.dev1 (04/20/2018)
+-----------------------
+
+New features
+~~~~~~~~~~~~
+
+* Plumb requirement blacklist through to the pex resolver (#5697)
+  `PR #5697 <https://github.com/pantsbuild/pants/pull/5697>`_
+
+* Add interpreter identity check for non-blacklisted interpreters (#5724)
+  `PR #5724 <https://github.com/pantsbuild/pants/pull/5724>`_
+
+* Eagerly fetch stdout on remote execution response (#5712)
+  `PR #5712 <https://github.com/pantsbuild/pants/pull/5712>`_
+
+Bugfixes
+~~~~~~~~
+
+* java_agent gets added to manifest for java_binary targets (#5722)
+  `PR #5722 <https://github.com/pantsbuild/pants/pull/5722>`_
+
+* Ensure test goal implicitly targets current platform when using python_dist targets (#5720)
+  `PR #5720 <https://github.com/pantsbuild/pants/pull/5720>`_
+  `PR #5618 <https://github.com/pantsbuild/pants/pull/5618>`_
+
+Refactoring, Improvements, and Tooling
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+
+* Update junit-runner to 1.0.24 and use junit-runner-annotations 0.0.21 in tests (#5721)
+  `PR #5721 <https://github.com/pantsbuild/pants/pull/5721>`_
+
+* convert usages of the ExecuteProcess helper into simple @rules to simplify snapshot consumption for process execution (#5703)
+  `PR #5703 <https://github.com/pantsbuild/pants/pull/5703>`_
+
+* Fix some errorprone warnings and remove duplicates from findbugs targets (#5711)
+  `PR #5711 <https://github.com/pantsbuild/pants/pull/5711>`_
+
+1.7.0.dev0 (04/13/2018)
+-----------------------
+
+New Features
+~~~~~~~~~~~~
+
+* @rules as coroutines (#5580)
+  `PR #5580 <https://github.com/pantsbuild/pants/pull/5580>`_
+
+API Changes
+~~~~~~~~~~~
+* Delete deprecated android backend (#5695)
+  `PR #5695 <https://github.com/pantsbuild/pants/pull/5695>`_
+
+* 1.7.0 deprecations (#5681)
+  `PR #5681 <https://github.com/pantsbuild/pants/pull/5681>`_
+
+* Remove SelectProjection. (#5672)
+  `PR #5672 <https://github.com/pantsbuild/pants/pull/5672>`_
+
+Bugfixes
+~~~~~~~~
+
+* Fixup RST parsing error. (#5687)
+  `PR #5687 <https://github.com/pantsbuild/pants/pull/5687>`_
+
+* Fix shader to not shade .class files under META-INF directory (#5671)
+  `PR #5671 <https://github.com/pantsbuild/pants/pull/5671>`_
+
+Refactoring, Improvements, and Tooling
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+
+* Use absolute path to check_rust_formatting (#5694)
+  `PR #5694 <https://github.com/pantsbuild/pants/pull/5694>`_
+
+* Remove unnecessary parens (#5693)
+  `PR #5693 <https://github.com/pantsbuild/pants/pull/5693>`_
+
+* Don't rename process_execution to process_executor (#5692)
+  `PR #5692 <https://github.com/pantsbuild/pants/pull/5692>`_
+
+* Run process execution Nodes on a CpuPool (#5691)
+  `PR #5691 <https://github.com/pantsbuild/pants/pull/5691>`_
+
+* add docs about how to run rust in IntelliJ (#5688)
+  `PR #5688 <https://github.com/pantsbuild/pants/pull/5688>`_
+
+* Prepare 1.6.0rc2 (#5690)
+  `PR #5690 <https://github.com/pantsbuild/pants/pull/5690>`_
+
+* Reset LMDB Environments when forking (#5689)
+  `PR #5689 <https://github.com/pantsbuild/pants/pull/5689>`_
+
+* Part 1: Add ability to check what CAS blobs are missing (#5686)
+  `PR #5686 <https://github.com/pantsbuild/pants/pull/5686>`_
+
+* Improve pypi package expected releasers pre-check. (#5669)
+  `PR #5669 <https://github.com/pantsbuild/pants/pull/5669>`_
+
+* Prepare 1.6.0rc1 (#5685)
+  `PR #5685 <https://github.com/pantsbuild/pants/pull/5685>`_
+
+* Make coursier resolve more friendly (#5675)
+  `PR #5675 <https://github.com/pantsbuild/pants/pull/5675>`_
+
+* Upgrade virtualenv. (#5679)
+  `PR #5679 <https://github.com/pantsbuild/pants/pull/5679>`_
+
+* Cleanup `unused_parens` warning for cast. (#5677)
+  `PR #5677 <https://github.com/pantsbuild/pants/pull/5677>`_
+
+* Add build_flags per go_binary (#5658)
+  `PR #5658 <https://github.com/pantsbuild/pants/pull/5658>`_
+
+* Bump to rust 1.25 (#5670)
+  `PR #5670 <https://github.com/pantsbuild/pants/pull/5670>`_
+
+* Add explicit JAXB dependencies in the junit-runner so it works in Java 9+ without --add-modules=java.xml.bind (#5667)
+  `PR #5667 <https://github.com/pantsbuild/pants/pull/5667>`_
+
+* [junit-runner] cache localhost lookups to ease OSX/JDK DNS issues (#5660)
+  `PR #5660 <https://github.com/pantsbuild/pants/pull/5660>`_
+
+* Narrow down BuildLocalPythonDistributions target type (#5659)
+  `PR #5659 <https://github.com/pantsbuild/pants/pull/5659>`_
+
+* Run `lint` in commit hooks. (#5666)
+  `PR #5666 <https://github.com/pantsbuild/pants/pull/5666>`_
+
+* Ban testprojects/pants-plugins from TestProjectsIntegrationTest. (#5665)
+  `PR #5665 <https://github.com/pantsbuild/pants/pull/5665>`_
+
 1.6.0rc0 (04/04/2018)
 ---------------------
 
@@ -6809,7 +8196,7 @@ This release completes the deprecated cycle for two options and removes them:
 Two existing tasks not installed by default have been moved from `pantsbuild.pants` to
 `pantsbuild.pants.contrib.python.checks`.  You can add `pantsbuild.pants.contrib.python.checks` to
 your `plugins` list in `pants.ini` to get these tasks installed and start verifying your python
-BUILD deps and to check that your python code conforms to pep8 and various other lints.
+BUILD deps and to check that your python code conforms to pycodestyle and various other lints.
 
 API Changes
 ~~~~~~~~~~~
@@ -8189,7 +9576,7 @@ use it by default!
 In the medium term, we're interested in making the isolated strategy the default jvm compilation
 strategy, so your assistance and feedback is appreciated!
 
-Special thanks to Stu Hood and Nick Howard for lots of work over the past months to get this point.
+Special thanks to Stu Hood and Nora Howard for lots of work over the past months to get this point.
 
 API Changes
 ~~~~~~~~~~~
